[gd_scene load_steps=15 format=1]

[ext_resource path="res://scripts/world.gd" type="Script" id=1]
[ext_resource path="res://scripts/menu/menu.gd" type="Script" id=2]
[ext_resource path="res://sprites/menu/menubackground.png" type="Texture" id=3]
[ext_resource path="res://sprites/clouds_1.png" type="Texture" id=4]
[ext_resource path="res://scripts/menu/main_menu.gd" type="Script" id=5]
[ext_resource path="res://fonts/LobsterTwo-Regular.fnt" type="BitmapFont" id=6]
[ext_resource path="res://scripts/menu/menu_option.gd" type="Script" id=7]
[ext_resource path="res://scripts/menu/menu_levels.gd" type="Script" id=8]
[ext_resource path="res://audio/menu/background.smp" type="Sample" id=9]

[sub_resource type="Animation" id=1]

resource/name = "levels-to-menu"
length = 0.200001
loop = false
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath(".:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.2 ), "transitions":FloatArray( -4, -4 ), "update":0, "values":[ Vector2( 0, 0 ), Vector2( 800, 0 ) ] }

[sub_resource type="Animation" id=2]

resource/name = "menu-to-levels"
length = 0.2
loop = false
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath(".:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.2 ), "transitions":FloatArray( -4, -4 ), "update":0, "values":[ Vector2( 800, 0 ), Vector2( 0, 0 ) ] }

[sub_resource type="Animation" id=3]

length = 0.2
loop = false
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath(".:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.2 ), "transitions":FloatArray( -4, -4 ), "update":0, "values":[ Vector2( 800, 0 ), Vector2( 1600, 0 ) ] }

[sub_resource type="Animation" id=4]

length = 0.2
loop = false
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath(".:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.2 ), "transitions":FloatArray( -4, -4 ), "update":0, "values":[ Vector2( 1600, 0 ), Vector2( 800, 0 ) ] }

[sub_resource type="SampleLibrary" id=5]

samples/menu-music = { "db":0.0, "pitch":1.0, "sample":ExtResource( 9 ) }

[node name="world" type="Node2D"]

script/script = ExtResource( 1 )

[node name="menu" type="Node" parent="."]

script/script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="menu"]

texture = ExtResource( 3 )
centered = false

[node name="cloud1" type="Sprite" parent="menu"]

transform/pos = Vector2( 1249.39, 386.794 )
transform/scale = Vector2( 0.124811, 0.124811 )
texture = ExtResource( 4 )

[node name="cloud2" type="Sprite" parent="menu"]

transform/pos = Vector2( 1295.22, 283.448 )
transform/scale = Vector2( 0.229829, 0.229829 )
texture = ExtResource( 4 )

[node name="cloud3" type="Sprite" parent="menu"]

transform/pos = Vector2( 1128.95, 218.3 )
transform/scale = Vector2( 0.410329, 0.410329 )
texture = ExtResource( 4 )

[node name="cloud4" type="Sprite" parent="menu"]

transform/pos = Vector2( 1264.72, 98.8843 )
transform/scale = Vector2( 0.57442, 0.57442 )
texture = ExtResource( 4 )

[node name="main_menu" type="Node" parent="menu"]

editor/display_folded = true
script/script = ExtResource( 5 )

[node name="main_menu_btn_start" type="Button" parent="menu/main_menu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 902.0
margin/top = 200.0
margin/right = 1052.0
margin/bottom = 249.0
custom_fonts/font = ExtResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Start"
flat = false

[node name="main_menu_btn_option" type="Button" parent="menu/main_menu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 901.0
margin/top = 299.0
margin/right = 1050.0
margin/bottom = 351.0
custom_fonts/font = ExtResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Option"
flat = false

[node name="main_menu_btn_quit" type="Button" parent="menu/main_menu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 901.0
margin/top = 401.0
margin/right = 1050.0
margin/bottom = 451.0
custom_fonts/font = ExtResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Quit"
flat = false

[node name="option_menu" type="Node" parent="menu"]

script/script = ExtResource( 7 )

[node name="option_menu_btn_back" type="Button" parent="menu/option_menu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1653.0
margin/top = 103.0
margin/right = 1801.0
margin/bottom = 148.0
custom_fonts/font = ExtResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Back"
flat = false

[node name="levels_menu" type="Node" parent="menu"]

editor/display_folded = true
script/script = ExtResource( 8 )

[node name="levels_menu_btn_back" type="Button" parent="menu/levels_menu"]

hint/tooltip = "Go back to main menu\n"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 600.0
margin/top = 101.0
margin/right = 748.0
margin/bottom = 148.0
custom_fonts/font = ExtResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Back"
flat = false

[node name="view" type="Camera2D" parent="menu"]

editor/display_folded = true
transform/pos = Vector2( 800, 0 )
anchor_mode = 0
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="menu_anim" type="AnimationPlayer" parent="menu/view"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/levels-to-menu = SubResource( 1 )
anims/menu-to-levels = SubResource( 2 )
anims/menu-to-option = SubResource( 3 )
anims/option-to-menu = SubResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="SamplePlayer" type="SamplePlayer" parent="menu"]

config/polyphony = 1
config/samples = SubResource( 5 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0


